fixed the prev and next location out of bounds error
fixed the prev and next location buttons going out of bounds and also added and indicator that you're at the last page or first

-- tweaked the geocode method , now it returns the data rather than destructuring it in the app,js

--- a/src/Components/Weather/Weather.scss
+++ b/src/Components/Weather/Weather.scss
@@ -49,6 +49,17 @@
       background: transparent;
       border: none;
       cursor: pointer;
+      transition-duration: 0.25s;
+      &:hover:not([disabled]){
+        background: #21283C;
+      }
+      &:disabled {
+        background: transparent;
+        cursor: not-allowed;
+      polyline{
+        stroke: gray;
+      }
+      }
       polyline {
         stroke-width: 3;
         stroke: white;
